# cinema-simulator

./: CMakeLists.txt  Movie.h  MovieSession.h  README.md  Room.cpp  Room.h  Roomseat.cpp  Roomseat.h  main.cpp  movie.h  moviesession.cpp  moviesession.h  room.cpp  room.h  roomseat.cpp  roomseat.h
